--- a/src/App.css
+++ b/src/App.css
@@ -2,12 +2,11 @@
   text-decoration: line-through;
 }
 body{
-text-align: center;
 background-size: cover;
 background-position: center;
 background-image: url('../public/img/unnamed.jpg');
 }
-button{
+.btn-1{
 text-decoration: none;
     color: #fff;
     font-weight: bold;
@@ -24,4 +23,15 @@ text-decoration: none;
    
 }.bsk-1{
 text-align: center;
+}
+.still-1{
+  width: 200px !important;
+  display: inline !important;
+}
+.still-2{
+  font-size: 20px !important;
+  display: inline-block ;
+  margin-left: 20px;
+  color: white;
+  font-weight: bold;
 }
